--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </svg> 3 days left </span>
     </h4>
     <p class="p-2">
-      <img src="/nft-preview-card-component-main/images/image-avatar.png" alt="Avatar is not found" width="40px"
+      <img src="images/image-avatar.png" alt="Avatar is not found" width="40px"
         height="40px" class="img-2">
 
       <span class="creator-color">&nbsp;&nbsp;&nbsp;&nbsp; Creation of </span> &nbsp;&nbsp;Jules Wyvern
